--- a/index.html
+++ b/index.html
@@ -1,109 +1,257 @@
-<!DOCTYPE html>
+
+<!doctype html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Плач Ярославны — Литературный уголок</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Рецепт "Нежной селёдки" — романтический рецепт</title>
+  <meta name="description" content="Романтичный и игривый 'рецепт' как приготовить неприготовленную селёдку (то есть меня) — нежно и с юмором." />
   <style>
-    /* Общие стили страницы */
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Georgia', serif;
-      background: linear-gradient(180deg, #faf7f2, #f0ebe3);
-      color: #2e2e2e;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
-      animation: fadeIn 1.5s ease;
+    /* Базовая эстетика — лёгкий, современный вид */
+    :root{
+      --bg: #fffdfa;
+      --card: #ffffff;
+      --accent: #6b9fdb;
+      --muted: #6b6b6b;
+      --danger: #d9534f;
+      --radius: 12px;
+      font-family: Inter, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    }
+    *{box-sizing:border-box}
+    body{
+      margin:0;
+      padding:32px;
+      background: linear-gradient(180deg,#f7fbff 0%,var(--bg) 100%);
+      color:#111;
+      -webkit-font-smoothing:antialiased;
+      -moz-osx-font-smoothing:grayscale;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      min-height:100vh;
+    }
+    .wrap{
+      width:100%;
+      max-width:760px;
+      background:var(--card);
+      border-radius:var(--radius);
+      box-shadow:0 10px 30px rgba(30,40,60,0.08);
+      padding:28px;
+      border:1px solid rgba(16,24,40,0.04);
+    }
+    header{
+      display:flex;
+      gap:12px;
+      align-items:center;
+      margin-bottom:18px;
+    }
+    .logo{
+      width:56px;height:56px;border-radius:12px;
+      display:grid;place-items:center;
+      background:linear-gradient(135deg, #9fd3ff 0%, #6b9fdb 100%);
+      color:white;font-weight:700;font-size:20px;
+      box-shadow:0 6px 16px rgba(107,159,219,0.18);
+    }
+    h1{margin:0;font-size:20px}
+    p.lead{margin:4px 0 0;color:var(--muted);font-size:14px}
+
+    .grid{
+      display:grid;
+      grid-template-columns: 1fr 300px;
+      gap:20px;
+      margin-top:18px;
+    }
+    @media (max-width:820px){
+      .grid{grid-template-columns:1fr}
     }
 
-    header {
-      text-align: center;
-      margin-bottom: 20px;
+    .card{
+      background:linear-gradient(180deg, rgba(245,249,255,0.6), rgba(255,255,255,0.95));
+      padding:18px;border-radius:10px;border:1px solid rgba(16,24,40,0.03);
     }
 
-    h1 {
-      font-size: 2.5em;
-      color: #4b3b2d;
-      margin: 0;
+    ul.ingredients{
+      margin:10px 0 0;padding-left:18px;
+      line-height:1.6;
+    }
+    ol.steps{
+      margin:8px 0 0;padding-left:18px;line-height:1.6;
     }
 
-    h2 {
-      font-size: 1.2em;
-      color: #7c6a58;
-      margin-top: 5px;
-      font-weight: normal;
+    .rules{
+      margin-top:12px;
+      display:flex;flex-direction:column;gap:8px;
+    }
+    .rule{
+      display:flex;gap:10px;align-items:flex-start;padding:10px;border-radius:8px;
+      background:linear-gradient(180deg,#fff,#fbfdff);
+      border:1px solid rgba(16,24,40,0.03);
+    }
+    .rule .dot{
+      width:38px;height:38px;border-radius:8px;display:grid;place-items:center;font-size:18px;
+      background:#fff5f5;border:1px solid rgba(217,83,79,0.08);
+      color:var(--danger);
+    }
+    .small{font-size:13px;color:var(--muted);}
+
+    .actions{
+      display:flex;gap:10px;margin-top:14px;flex-wrap:wrap;
+    }
+    button{
+      cursor:pointer;border:0;padding:10px 14px;border-radius:10px;font-weight:600;
+      background:var(--accent);color:white;
+      box-shadow:0 6px 18px rgba(107,159,219,0.12);
+      transition:transform .12s ease,box-shadow .12s ease;
+    }
+    button.secondary{
+      background:#f3f4f6;color:#111;border:1px solid rgba(16,24,40,0.06);
+      box-shadow:none;font-weight:600;
+    }
+    button:active{transform:translateY(1px)}
+
+    .note{
+      margin-top:12px;color:#333;font-size:14px;padding:12px;border-radius:8px;background:#fffef6;border:1px solid rgba(0,0,0,0.03)
     }
 
-    .poem {
-      background-color: #ffffffcc;
-      padding: 30px 40px;
-      max-width: 700px;
-      border-radius: 15px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      line-height: 1.8;
-      white-space: pre-line;
-      font-size: 1.1em;
-      text-align: center;
-    }
-
-    footer {
-      margin-top: 30px;
-      font-size: 0.9em;
-      color: #7c6a58;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
+    footer{margin-top:18px;font-size:13px;color:var(--muted);text-align:right}
+    .copy-ok{display:inline-block;padding-left:8px;color:green;font-weight:600}
+    .forbidden{color:var(--danger);font-weight:700}
+    .center{display:flex;align-items:center;gap:10px}
   </style>
 </head>
 <body>
-  <header>
-    <h1>Плач Ярославны</h1>
-    <h2>Из «Слова о полку Игореве»</h2>
-  </header>
+  <main class="wrap" role="main">
+    <header>
+      <div class="logo" aria-hidden="true">💙</div>
+      <div>
+        <h1>Рецепт “Нежной селёдки”</h1>
+        <p class="lead">Романтичный и игривый рецепт — как приготовить неприготовленную селёдку (то есть тебя). Для личного использования 😉</p>
+      </div>
+    </header>
 
-  <div class="poem">
-Над широким берегом Дуная,
-Над великой Галицкой землёй
-Плачет, из Путивля долетая,
-Голос Ярославны молодой:
+    <div class="grid" role="region" aria-labelledby="recipeTitle">
+      <section class="card" aria-labelledby="ingredientsTitle">
+        <h2 id="recipeTitle" style="margin-top:0;font-size:16px">Ингредиенты</h2>
+        <ul class="ingredients" aria-labelledby="ingredientsTitle">
+          <li>1 неприготовленная селёдка (то есть я 😏)</li>
+          <li>1 пара тёплых рук</li>
+          <li>2 щепотки поцелуев</li>
+          <li>немного объятий — по вкусу</li>
+          <li>и много-много любви</li>
+        </ul>
 
-«Обернусь я, бедная, кукушкой,
-По Дунаю-речке полечу
-И рукав с бобровою опушкой
-Наклонясь, в Каяле омочу.
-Улетят, развеются туманы,
-Приоткроет очи Игорь-князь,
-И утру кровавые я раны,
-Над могучим телом наклонясь».
+        <h3 style="margin-top:14px">Способ приготовления</h3>
+        <ol class="steps" aria-label="Шаги приготовления">
+          <li>Аккуратно взять селёдку в объятия — не пугать, а греть.</li>
+          <li>Медленно посыпать комплиментами.</li>
+          <li>Добавить пару поцелуев, пока не заиграет улыбка.</li>
+          <li>Томить в атмосфере нежности до полного счастья.</li>
+          <li>Подавать с тёплыми словами и взглядом без слов 💋</li>
+        </ol>
 
-Далеко в Путивле, на забрале,
-Лишь заря займётся поутру,
-Ярославна, полная печали,
-Как кукушка, кличет на юру:
+        <div class="actions" role="group" aria-label="Действия">
+          <button id="copyBtn" type="button" title="Скопировать рецепт в буфер обмена">Скопировать рецепт</button>
+          <button id="printBtn" class="secondary" type="button" title="Распечатать страницу">Распечатать</button>
+        </div>
 
-«Что ты, Ветер, злобно повеваешь,
-Что клубишь туманы у реки,
-Стрелы половецкие вздымаешь,
-Мечешь их на русские полки?
-Чем тебе не любо на просторе
-Высоко под облаком летать,
-Корабли лелеять в синем море,
-За кормою волны колыхать?
-Ты же, стрелы вражеские сея,
-Только смертью веешь с высоты.
-Ах, зачем, зачем моё веселье
-В ковылях навек развеял ты?»
-  </div>
+        <div id="copyMsg" class="small" aria-live="polite" style="margin-top:8px"></div>
+      </section>
 
-  <footer>
-    © Литературный уголок | Древнерусская поэзия
-  </footer>
+      <aside class="card" aria-labelledby="rulesTitle">
+        <h2 id="rulesTitle" style="margin-top:0;font-size:16px">Правила подачи</h2>
+
+        <div class="rules" role="list">
+          <div class="rule" role="listitem">
+            <div class="dot" aria-hidden="true">🚫</div>
+            <div>
+              <div><strong>Запреты (важно!)</strong></div>
+              <div class="small" style="margin-top:6px">
+                Серьёзно: <span class="forbidden">селёдку с шубой нельзя</span> — это уже другая история. <br>
+                И ещё: <span class="forbidden">селёдку со свёклой нельзя</span> — сегодня мы любим простоту и тепло.
+              </div>
+            </div>
+          </div>
+
+          <div class="rule" role="listitem">
+            <div class="dot" aria-hidden="true">💞</div>
+            <div>
+              <div><strong>Правило искренности</strong></div>
+              <div class="small" style="margin-top:6px">
+                В этом рецепте <strong>не принимаются вторые партнёры</strong> — только вы двое и искренняя нежность.
+              </div>
+            </div>
+          </div>
+
+          <div class="rule" role="listitem">
+            <div class="dot" aria-hidden="true">✨</div>
+            <div>
+              <div><strong>Совет шефа</strong></div>
+              <div class="small" style="margin-top:6px">
+                Не спешите: томление в атмосфере нежности даёт лучший вкус.
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="note" aria-hidden="false">
+          Хочешь сделать шутливую подачу? Напиши этот рецепт на карточке и спрячь под подушкой — эффект гарантирован.
+        </div>
+      </aside>
+    </div>
+
+    <footer>
+      <div class="center">
+        <div class="small">Автор: твой личный повар по флирту</div>
+      </div>
+    </footer>
+  </main>
+
+  <script>
+    // Копирование рецепта в буфер (включая запреты)
+    (function(){
+      const copyBtn = document.getElementById('copyBtn');
+      const printBtn = document.getElementById('printBtn');
+      const copyMsg = document.getElementById('copyMsg');
+
+      function getRecipeText(){
+        return [
+          'Рецепт “Нежной селёдки”',
+          'Ингредиенты:',
+          '- 1 неприготовленная селёдка (то есть я 😏)',
+          '- 1 пара тёплых рук',
+          '- 2 щепотки поцелуев',
+          '- Немного объятий по вкусу',
+          '- И много-много любви',
+          '',
+          'Способ приготовления:',
+          '1) Аккуратно взять селёдку в объятия — не пугать, а греть.',
+          '2) Медленно посыпать комплиментами.',
+          '3) Добавить пару поцелуев, пока не заиграет улыбка.',
+          '4) Томить в атмосфере нежности до полного счастья.',
+          '5) Подавать с тёплыми словами и взглядом без слов 💋',
+          '',
+          'Правила подачи: селёдку с шубой нельзя. селёдку со свёклой нельзя. Вторые партнёры — не принимаются.'
+        ].join('\\n');
+      }
+
+      copyBtn.addEventListener('click', async function(){
+        try {
+          await navigator.clipboard.writeText(getRecipeText());
+          copyMsg.textContent = 'Скопировано в буфер обмена ✓';
+          copyMsg.classList.add('copy-ok');
+          setTimeout(()=>{ copyMsg.textContent=''; copyMsg.classList.remove('copy-ok'); }, 2500);
+        } catch (err) {
+          // fallback
+          copyMsg.textContent = 'Не удалось скопировать автоматически — выделите и скопируйте вручную.';
+          setTimeout(()=>{ copyMsg.textContent=''; }, 3500);
+        }
+      });
+
+      printBtn.addEventListener('click', function(){ window.print(); });
+
+      // Небольшая защита — не позволять открыть печать/копирование массово
+      // (означает только UX, не блокирует полностью)
+    })();
+  </script>
 </body>
 </html>
