--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@
     <header>
       <div class="logo" aria-hidden="true">💙</div>
       <div>
-        <h1>Рецепт “Нежной селёдки”</h1>
-        <p class="lead">Романтичный и игривый рецепт — как приготовить неприготовленную селёдку (то есть тебя). Для личного использования 😉</p>
+        <h1>Рецепт “селёдки” (имрана)</h1>
       </div>
     </header>
 
@@ -133,10 +132,10 @@
       <section class="card" aria-labelledby="ingredientsTitle">
         <h2 id="recipeTitle" style="margin-top:0;font-size:16px">Ингредиенты</h2>
         <ul class="ingredients" aria-labelledby="ingredientsTitle">
-          <li>1 неприготовленная селёдка (то есть я 😏)</li>
+          <li>1 невкусная селёдка</li>
           <li>1 пара тёплых рук</li>
           <li>2 щепотки поцелуев</li>
-          <li>немного объятий — по вкусу</li>
+          <li>немного объятий</li>
           <li>и много-много любви</li>
         </ul>
 
@@ -144,9 +143,7 @@
         <ol class="steps" aria-label="Шаги приготовления">
           <li>Аккуратно взять селёдку в объятия — не пугать, а греть.</li>
           <li>Медленно посыпать комплиментами.</li>
-          <li>Добавить пару поцелуев, пока не заиграет улыбка.</li>
-          <li>Томить в атмосфере нежности до полного счастья.</li>
-          <li>Подавать с тёплыми словами и взглядом без слов 💋</li>
+          <li>Добавить пару поцелуев, пока селедка не начнет улыбаться.</li>
         </ol>
 
         <div class="actions" role="group" aria-label="Действия">
@@ -166,42 +163,17 @@
             <div>
               <div><strong>Запреты (важно!)</strong></div>
               <div class="small" style="margin-top:6px">
-                Серьёзно: <span class="forbidden">селёдку с шубой нельзя</span> — это уже другая история. <br>
-                И ещё: <span class="forbidden">селёдку со свёклой нельзя</span> — сегодня мы любим простоту и тепло.
+                Очень серьезно: <span class="forbidden">селёдку со свёклой нельзя</span>
               </div>
             </div>
           </div>
-
-          <div class="rule" role="listitem">
-            <div class="dot" aria-hidden="true">💞</div>
-            <div>
-              <div><strong>Правило искренности</strong></div>
-              <div class="small" style="margin-top:6px">
-                В этом рецепте <strong>не принимаются вторые партнёры</strong> — только вы двое и искренняя нежность.
-              </div>
-            </div>
-          </div>
-
-          <div class="rule" role="listitem">
-            <div class="dot" aria-hidden="true">✨</div>
-            <div>
-              <div><strong>Совет шефа</strong></div>
-              <div class="small" style="margin-top:6px">
-                Не спешите: томление в атмосфере нежности даёт лучший вкус.
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="note" aria-hidden="false">
-          Хочешь сделать шутливую подачу? Напиши этот рецепт на карточке и спрячь под подушкой — эффект гарантирован.
         </div>
       </aside>
     </div>
 
     <footer>
       <div class="center">
-        <div class="small">Автор: твой личный повар по флирту</div>
+        <div class="small">Автор: селедка нах</div>
       </div>
     </footer>
   </main>
@@ -217,7 +189,7 @@
         return [
           'Рецепт “Нежной селёдки”',
           'Ингредиенты:',
-          '- 1 неприготовленная селёдка (то есть я 😏)',
+          '- 1 неприготовленная селёдка',
           '- 1 пара тёплых рук',
           '- 2 щепотки поцелуев',
           '- Немного объятий по вкусу',
@@ -226,11 +198,9 @@
           'Способ приготовления:',
           '1) Аккуратно взять селёдку в объятия — не пугать, а греть.',
           '2) Медленно посыпать комплиментами.',
-          '3) Добавить пару поцелуев, пока не заиграет улыбка.',
-          '4) Томить в атмосфере нежности до полного счастья.',
-          '5) Подавать с тёплыми словами и взглядом без слов 💋',
+          '3) Добавить пару поцелуев, пока селедка не улыбнется.',
           '',
-          'Правила подачи: селёдку с шубой нельзя. селёдку со свёклой нельзя. Вторые партнёры — не принимаются.'
+          'Правила подачи: селёдку с шубой нельзя. селёдку со свёклой нельзя'
         ].join('\\n');
       }
 
